# mem_forensics-mcp

./: .gitignore  CLAUDE.md  README.md  merge_plan.md  pyproject.toml
engines/memoxide-src/: Cargo.toml
engines/memoxide-src/crates/isf/: Cargo.toml
engines/memoxide-src/crates/isf/src/: error.rs  lib.rs  parser.rs  reader.rs  types.rs
engines/memoxide-src/crates/memoxide/: Cargo.toml
engines/memoxide-src/crates/memoxide/src/: main.rs
engines/memoxide-src/crates/memoxide/src/analyzers/: full_triage.rs  mod.rs  network_analyzer.rs  process_anomalies.rs
engines/memoxide-src/crates/memoxide/src/memory/: error.rs  image.rs  mod.rs  traits.rs  virtual_memory.rs
engines/memoxide-src/crates/memoxide/src/memory/layers/: mmap_file.rs  mod.rs
engines/memoxide-src/crates/memoxide/src/memory/scanners/: mod.rs  simd_scanner.rs
engines/memoxide-src/crates/memoxide/src/memory/translators/: arm64.rs  intel32.rs  intel64.rs  intel_pae.rs  mod.rs  windows.rs
engines/memoxide-src/crates/memoxide/src/plugins/: cmdline.rs  cmdscan.rs  dlllist.rs  malfind.rs  memsearch.rs  mod.rs  netscan.rs  pslist.rs  psscan.rs
engines/memoxide-src/crates/memoxide/src/profile/: detector.rs  kdbg.rs  kuser.rs  mod.rs  pdbconv.rs  rsds.rs  symserver.rs
engines/memoxide-src/crates/memoxide/src/registry/: crypto.rs  hive.rs  mod.rs
engines/memoxide-src/crates/memoxide/src/rules/: command_patterns.rs  lolbins.rs  mod.rs  parent_child.rs  suspicious_ports.rs
engines/memoxide-src/crates/memoxide/src/server/: mod.rs  session.rs  tools.rs  types.rs
mem_forensics_mcp/: __init__.py  config.py  server.py
mem_forensics_mcp/analyzers/: __init__.py  command_history.py  credential_extractor.py  full_triage.py  injection_scanner.py  network_analyzer.py  process_analyzer.py  profile_detector.py
mem_forensics_mcp/core/: __init__.py  plugin_runner.py  session.py  vol3_runner.py
mem_forensics_mcp/engine/: __init__.py  memoxide_client.py
mem_forensics_mcp/extractors/: __init__.py  process_dumper.py
mem_forensics_mcp/utils/: __init__.py  parent_child_rules.py  virustotal_client.py
tests/: test_basic.py
